dynamic-rupture/regional-only/automated-runs/test_yaml_build/logs/jobid_3875599/3875599.regional-only.out
Tue 03 Sep 2024 10:47:11 PM UTC
num_nodes: 16 ntasks: 16 cpus_per_task:
Line 63 replaced with: OutputFile='/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875599'
Job log complete.
Starting SeisSol...
Wed Sep 04 00:47:13, Info:  Using the parameter file parameters.par 
Wed Sep 04 00:47:13, Info:  Reading SeisSol parameter file... 
Wed Sep 04 00:47:13, Info:  In your parameter file, you have specified a non-positive interval for "checkpointinterval" . This mechanism is deprecated and may be removed in a future version of SeisSol. Consider disabling the whole module by setting "checkpoint" to 0 instead by adding "checkpoint = 0" to the "output" section of your parameter file instead. 
Wed Sep 04 00:47:13, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 00:47:13, Info:  Disabling the wavefield output by setting "outputformat = 10" is deprecated and may be removed in a future version of SeisSol. Consider using the parameter "wavefieldoutput" instead. To disable wavefield output, add "wavefieldoutput = 0" to the "output" section of your parameters file. 
Wed Sep 04 00:47:13, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 00:47:13, Info:  The field "pickdttype" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 00:47:13, Info:  The field "faultoutputflag" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 00:47:13, Info:  The field "boundaries" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 00:47:13, Info:  SeisSol parameter file read successfully. 
Wed Sep 04 00:47:13, Info:  Model information: 
Wed Sep 04 00:47:13, Info:  Elastic model: yes 
Wed Sep 04 00:47:13, Info:  Viscoelastic model: no 
Wed Sep 04 00:47:13, Info:  Anelastic model: no 
Wed Sep 04 00:47:13, Info:  Poroelastic model: no 
Wed Sep 04 00:47:13, Info:  Anisotropic model: no 
Wed Sep 04 00:47:13, Info:  Plasticity: no 
Wed Sep 04 00:47:13, Info:  Welcome to SeisSol 
Wed Sep 04 00:47:13, Info:  Copyright (c) 2012 - 2024  SeisSol Group 
Wed Sep 04 00:47:13, Info:  Version: v1.1.4-148-g60aedc8c (dirty) 
Wed Sep 04 00:47:13, Info:  Built on: Jun 17 2024 21:03:35 
Wed Sep 04 00:47:13, Info:  Last commit: 60aedc8c2ae0a5d9e5a46cc3a40e4eaf1c047225 at 2024-06-06T12:54:08+00:00 
Wed Sep 04 00:47:13, Info:  Compiled with HOST_ARCH = skx 
Wed Sep 04 00:47:13, Info:  Running on (rank=0): "i01r01c04s01" 
Wed Sep 04 00:47:13, Info:  Using MPI with #ranks: 16 
Wed Sep 04 00:47:13, Info:  Node-wide (shared memory) MPI with #ranks/node: 1 
Wed Sep 04 00:47:13, Info:  Using asynchronous MPI routines. 
Wed Sep 04 00:47:13, Info:  Using OMP with #threads/rank: 94 
Wed Sep 04 00:47:13, Info:  OpenMP worker affinity (this process): "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Wed Sep 04 00:47:13, Info:  OpenMP worker affinity (this node)   : "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Wed Sep 04 00:47:13, Info:  Using a communication thread for advancing MPI communication. 
Wed Sep 04 00:47:13, Info:  Communication thread affinity        : "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Wed Sep 04 00:47:13, Info:  The stack size ulimit is 2097152 [kiB] ( = 2.0000 GiB ). 
Wed Sep 04 00:47:13, Info:  Begin init mesh. 
Wed Sep 04 00:47:13, Info:  Mesh file: "/dss/dsshome1/01/di35poq/mesh/mesh_v07/Haiti_v07_lowres" 
Wed Sep 04 00:47:13, Info:  Running mini SeisSol to determine node weights. 
Wed Sep 04 00:47:13, Info:  miniSeisSol configured with 50000 elements and 10 repeats per process 
Wed Sep 04 00:47:13, Info:  Node weights: mean = 41.3535  std = 0.385651  min = 40.3021  median = 41.3572  max = 42.029 
Wed Sep 04 00:47:13, Info:  Reading PUML mesh 
Wed Sep 04 00:47:13, Info:  Inferring boundary format. 
Wed Sep 04 00:47:13, Info:  Boundary format not given in PUML file; inferring from array shape. 
Wed Sep 04 00:47:13, Info:  Using boundary format: i32 (4xi8) 
Wed Sep 04 00:47:13, Info:  Found 2685422 cells 
Wed Sep 04 00:47:13, Info:  Found 477078 vertices 
Wed Sep 04 00:47:15, Info:  Computing LTS weights. 
Wed Sep 04 00:47:18, Info:  Limiting number of clusters to 2147483646 
Wed Sep 04 00:47:18, Info:  Computing LTS weights. Done.  (108216 reductions.)
Wed Sep 04 00:47:18, Info:  Using the Parmetis partition library and strategy. 
Wed Sep 04 00:47:21, Info:  PUML mesh read in: 7.9867 s (min: 7.8705 s, max: 8.1290 s)
Wed Sep 04 00:47:21, Info:  The mesh has been read. Starting post processing. 
Wed Sep 04 00:47:21, Info:  Extracting fault information. 
Wed Sep 04 00:47:21, Info:  Exchanging ghostlayer metadata. 
Wed Sep 04 00:47:23, Info:  Mesh initialized in: 9.8125 s (min: 9.8121 s, max: 9.8135 s)
Wed Sep 04 00:47:23, Info:  End init mesh. 
Wed Sep 04 00:47:23, Info:  Begin init model. 
Wed Sep 04 00:47:23, Info:  Initialize LTS. 
Wed Sep 04 00:47:23, Info:  Deriving clusters ids for min. time step width / multiRate: 0.000213316 / 2 
Wed Sep 04 00:47:23, Info:  Due to wiggle factor of 1 the minimum timestep size is reduced to 0.000213316 
Wed Sep 04 00:47:23, Info:  Number of elements in time clusters: 
Wed Sep 04 00:47:23, Info:  0: 2088 
Wed Sep 04 00:47:23, Info:  1: 265401 
Wed Sep 04 00:47:23, Info:  2: 1618976 
Wed Sep 04 00:47:23, Info:  3: 538212 
Wed Sep 04 00:47:23, Info:  4: 147352 
Wed Sep 04 00:47:23, Info:  5: 35652 
Wed Sep 04 00:47:23, Info:  6: 11329 
Wed Sep 04 00:47:23, Info:  7: 18592 
Wed Sep 04 00:47:23, Info:  8: 47781 
Wed Sep 04 00:47:23, Info:  9: 39 
Wed Sep 04 00:47:23, Info:  maximum theoretical speedup (compared to GTS): 6.4313 per cell LTS, 4.34786 with the used clustering. 
Wed Sep 04 00:47:23, Info:  Number of elements in dynamic rupture time clusters: 
Wed Sep 04 00:47:23, Info:  0 (dr): 619 
Wed Sep 04 00:47:23, Info:  1 (dr): 78798 
Wed Sep 04 00:47:23, Info:  2 (dr): 309907 
Wed Sep 04 00:47:23, Info:  3 (dr): 2510 
Wed Sep 04 00:47:23, Info:  4 (dr): 0 
Wed Sep 04 00:47:23, Info:  5 (dr): 0 
Wed Sep 04 00:47:23, Info:  6 (dr): 0 
Wed Sep 04 00:47:23, Info:  7 (dr): 0 
Wed Sep 04 00:47:23, Info:  8 (dr): 0 
Wed Sep 04 00:47:23, Info:  9 (dr): 0 
Wed Sep 04 00:47:23, Info:  Initialize Friction Model 
Wed Sep 04 00:47:24, Info:  Initialize cell material parameters. 
Wed Sep 04 00:47:25, Info:  Initialize Memory layout. 
Wed Sep 04 00:47:25, Info:  Initialize cell-local matrices. 
Wed Sep 04 00:47:26, Info:  Initializing Fault, using a quadrature rule with  25  points. 
Wed Sep 04 00:49:22, Info:  Model initialized in: 1 min 58.9582 s (min: 1 min 58.9563 s, max: 1 min 58.9624 s)
Wed Sep 04 00:49:22, Info:  End init model. 
Wed Sep 04 00:49:22, Info:  Setting initial conditions. 
Wed Sep 04 00:49:22, Info:  Using initial condition "Zero" . 
Wed Sep 04 00:49:22, Info:  Reading source. 
Wed Sep 04 00:49:22, Info:  No source term specified. 
Wed Sep 04 00:49:22, Info:  Setting up boundary conditions. 
Wed Sep 04 00:49:22, Info:  Begin init output. 
Wed Sep 04 00:49:22, Info:  Initializing free surface integrator. 
Wed Sep 04 00:49:22, Info:  Initializing free surface integrator. Done. 
Wed Sep 04 00:49:22, Info:  Enabling 2D fault output 
Wed Sep 04 00:49:22, Info:  Initializing Fault output. Number of sub-triangles: 4 
Wed Sep 04 00:49:22, Info:  Initializing XDMF fault output. 
Wed Sep 04 00:49:22, Info:  Fault writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Wed Sep 04 00:49:22, Info:  Initializing XDMF fault output. Done. 
Wed Sep 04 00:49:22, Info:  Initializing free surface output. 
Wed Sep 04 00:49:22, Info:  Free surface writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Wed Sep 04 00:49:22, Info:  Initializing free surface output. Done. 
Wed Sep 04 00:49:22, Info:  No record points read. 
Wed Sep 04 00:49:22, Info:  Finding meshIds for receivers... 
Wed Sep 04 00:49:22, Info:  Cleaning possible double occurring receivers for MPI... 
Wed Sep 04 00:49:22, Info:  Mapping receivers to LTS cells... 
Wed Sep 04 00:49:22, Info:  Initializing energy output. 
Wed Sep 04 00:49:22, Info:  End init output. 
Wed Sep 04 00:49:22, Info:  Finishing initialization... 
Wed Sep 04 00:49:22, Info:  Starting simulation. 
Wed Sep 04 00:49:22, Info:  Writing faultoutput at time 0.
Wed Sep 04 00:49:22, Info:  Writing faultoutput at time 0. Done.
Wed Sep 04 00:49:22, Info:  Writing free surface at time 0.
Wed Sep 04 00:49:22, Info:  Writing free surface at time 0. Done.
Wed Sep 04 00:49:22, Info:  Writing energy output at time 0 
Wed Sep 04 00:49:22, Info:  Total momentum (X, Y, Z): 0  , 0  , 0 
Wed Sep 04 00:49:22, Info:  Writing energy output at time 0 Done. 
Wed Sep 04 00:49:22, Info:  Time spent for initial IO: 51.2637 ms (min: 40.2559 ms, max: 65.8602 ms)
Wed Sep 04 00:49:48, Info:  Writing faultoutput at time 0.5.
Wed Sep 04 00:49:48, Info:  Writing faultoutput at time 0.5. Done.
Wed Sep 04 00:49:48, Info:  Writing energy output at time 0.5 
Wed Sep 04 00:49:48, Info:  Elastic energy (total, % kinematic, % potential):  6.6512e+11  , 25.1683  , 74.8317 
Wed Sep 04 00:49:48, Info:  Total momentum (X, Y, Z): 0.00412737  , 0.00989843  , 0.000713139 
Wed Sep 04 00:49:48, Info:  Frictional work (total, % static, % radiated):  6.73024e+11  , 72.8589  , 27.1411 
Wed Sep 04 00:49:48, Info:  Seismic moment (without plasticity): 1.16334e+16  Mw: 4.64047 
Wed Sep 04 00:49:48, Info:  Writing energy output at time 0.5 Done. 
Wed Sep 04 00:49:48, Info:  Time spent this phase (total): 26.1789 s (min: 26.1400 s, max: 26.2197 s)
Wed Sep 04 00:49:48, Info:  Time spent this phase (compute): 26.1276 s (min: 26.0913 s, max: 26.1559 s)
Wed Sep 04 00:49:48, Info:  Time spent this phase (IO): 50.1232 ms (min: 38.6595 ms, max: 76.9965 ms)
Wed Sep 04 00:49:48, Info:  Performance since the start: 9.6133 TFLOP/s (rank 0: 600.3943 GFLOP/s , average over ranks: 600.8334 GFLOP/s ) 
Wed Sep 04 00:49:48, Info:  Performance since last sync point: 9.6133 TFLOP/s (rank 0: 600.3943 GFLOP/s , average over ranks: 600.8334 GFLOP/s ) 
Wed Sep 04 00:50:15, Info:  Writing faultoutput at time 1.
Wed Sep 04 00:50:15, Info:  Writing faultoutput at time 1. Done.
Wed Sep 04 00:50:15, Info:  Writing free surface at time 1.
Wed Sep 04 00:50:15, Info:  Writing free surface at time 1. Done.
Wed Sep 04 00:50:15, Info:  Wrote receivers in 5.35e-07 seconds. 
Wed Sep 04 00:50:15, Info:  Writing energy output at time 1 
Wed Sep 04 00:50:15, Info:  Elastic energy (total, % kinematic, % potential):  5.74201e+12  , 26.9308  , 73.0692 
Wed Sep 04 00:50:15, Info:  Total momentum (X, Y, Z): 0.387702  , 0.327706  , -0.103224 
Wed Sep 04 00:50:15, Info:  Frictional work (total, % static, % radiated):  5.98271e+12  , 68.9524  , 31.0476 
Wed Sep 04 00:50:15, Info:  Seismic moment (without plasticity): 9.35764e+16  Mw: 5.24411 
Wed Sep 04 00:50:15, Info:  Writing energy output at time 1 Done. 
Wed Sep 04 00:50:15, Info:  Time spent this phase (total): 26.3946 s (min: 26.3209 s, max: 26.4676 s)
Wed Sep 04 00:50:15, Info:  Time spent this phase (compute): 26.3944 s (min: 26.3208 s, max: 26.4675 s)
Wed Sep 04 00:50:15, Info:  Time spent this phase (IO): 53.9055 ms (min: 38.9026 ms, max: 110.4730 ms)
Wed Sep 04 00:50:15, Info:  Performance since the start: 9.5739 TFLOP/s (rank 0: 598.4021 GFLOP/s , average over ranks: 598.3671 GFLOP/s ) 
Wed Sep 04 00:50:15, Info:  Performance since last sync point: 9.5348 TFLOP/s (rank 0: 596.4231 GFLOP/s , average over ranks: 595.9232 GFLOP/s ) 
Wed Sep 04 00:50:15, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 00:50:15, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 00:50:15, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 00:50:15, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 00:50:15, Info:  Simulation time (total): 52.5736 s (min: 52.5092 s, max: 52.6148 s)
Wed Sep 04 00:50:15, Info:  Simulation time (compute): 52.4181 s (min: 52.3489 s, max: 52.4768 s)
Wed Sep 04 00:50:15, Info:  Simulation time (IO): 155.1445 ms (min: 117.7030 ms, max: 247.2565 ms)
Wed Sep 04 00:50:15, Info:  Time spent in compute kernels: mean = 50.7692  std = 0.499024  min = 49.6431  median = 50.6981  max = 51.6431 
Wed Sep 04 00:50:15, Info:  Load imbalance: 1.69221 % 
Wed Sep 04 00:50:15, Info:  Regression analysis of compute kernels: 
Wed Sep 04 00:50:15, Info:  "computeLocalIntegration" (total time): 246.505 s ( = 4 min 6.5049 s ) 
Wed Sep 04 00:50:15, Info:  "computeLocalIntegration" ( constant ): 2.13142e-05 (sample size: 261854 , standard error: 2.60458e-11 ) 
Wed Sep 04 00:50:15, Info:  "computeLocalIntegration" ( per element ): 8.31561e-08 (sample size: 261854 , standard error: 2.60458e-11 ) 
Wed Sep 04 00:50:15, Info:  "computeNeighboringIntegration" (total time): 299.425 s ( = 4 min 59.4254 s ) 
Wed Sep 04 00:50:15, Info:  "computeNeighboringIntegration" ( constant ): 0.000138763 (sample size: 261854 , standard error: 3.2854e-11 ) 
Wed Sep 04 00:50:15, Info:  "computeNeighboringIntegration" ( per element ): 9.08068e-08 (sample size: 261854 , standard error: 3.2854e-11 ) 
Wed Sep 04 00:50:15, Info:  "computeDynamicRupture" (total time): 266.376 s ( = 4 min 26.3763 s ) 
Wed Sep 04 00:50:15, Info:  "computeDynamicRupture" ( constant ): 7.82423e-05 (sample size: 213304 , standard error: 1.78081e-10 ) 
Wed Sep 04 00:50:15, Info:  "computeDynamicRupture" ( per element ): 4.52097e-07 (sample size: 213304 , standard error: 1.78081e-10 ) 
Wed Sep 04 00:50:15, Info:  "computePointSources" (total time): 0 s ( = 0.0000 s ) 
Wed Sep 04 00:50:15, Info:  "computePointSources" ( constant ): -nan (sample size: 0 , standard error: -nan ) 
Wed Sep 04 00:50:15, Info:  "computePointSources" ( per element ): -nan (sample size: 0 , standard error: -nan ) 
Wed Sep 04 00:50:15, Info:  Total time spent in compute kernels: 812.307 s ( = 13 min 32.3066 s ) 
Wed Sep 04 00:50:15, Info:  Total calculated HW-FLOP:  503.3322 TFLOP 
Wed Sep 04 00:50:15, Info:  Total calculated NZ-FLOP:  201.2034 TFLOP 
Wed Sep 04 00:50:15, Info:  Total calculated HW-FLOP/s:  9.5664 TFLOP/s 
Wed Sep 04 00:50:15, Info:  Total calculated NZ-FLOP/s:  3.8241 TFLOP/s 
Wed Sep 04 00:50:15, Info:  WP calculated HW-FLOP:  417.0495 TFLOP 
Wed Sep 04 00:50:15, Info:  WP calculated NZ-FLOP:  137.0482 TFLOP 
Wed Sep 04 00:50:15, Info:  DR calculated HW-FLOP:  86.2827 TFLOP 
Wed Sep 04 00:50:15, Info:  DR calculated NZ-FLOP:  64.1552 TFLOP 
Wed Sep 04 00:50:15, Info:  PL calculated HW-FLOP:  0.0000 FLOP 
Wed Sep 04 00:50:15, Info:  PL calculated NZ-FLOP:  0.0000 FLOP 
Wed Sep 04 00:50:15, Info:  Time spent in simulation: 52.6155 s (min: 52.6153 s, max: 52.6190 s)
Wed Sep 04 00:50:15, Info:  Simulation done. 
Wed Sep 04 00:50:15, Info:  Closing IO. 
Wed Sep 04 00:50:16, Info:  Time fault writer backend: 392.4715 ms (min: 201.1676 ms, max: 2.9682 s)
Wed Sep 04 00:50:16, Info:  Time fault writer frontend: 3.1680 ms (min: 2.6748 ms, max: 3.8064 ms)
Wed Sep 04 00:50:16, Info:  Time free surface writer backend: 117.4081 ms (min: 470.9110 µs, max: 1.1351 s)
Wed Sep 04 00:50:16, Info:  Time free surface writer frontend: 233.8840 µs (min: 39.7790 µs, max: 992.3670 µs)
Wed Sep 04 00:50:16, Info:  SeisSol done. Goodbye. 
SeisSol complete.
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875599 ~/haiti-rupture-inputs/dynamic-rupture/regional-only/automated-runs/yaml_build_test
Writing hdf5 output with compression enabled (compression_level=4). 
Use --compression=0 if you want to speed-up data extraction.
u1: 0it [00:00, ?it/s]u1: 1it [00:00, 59.28it/s]
u2: 0it [00:00, ?it/s]u2: 1it [00:00, 175.03it/s]
u3: 0it [00:00, ?it/s]u3: 1it [00:00, 64.73it/s]
done writing output_jobid_3875599_extracted-surface.h5
done writing output_jobid_3875599_extracted-surface.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875599/output_jobid_3875599_extracted-surface.xdmf
Working on JobID: 3875599
No matching file found for jobid 3875599. Assigning output-fault.xdmf instead
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875599/output-fault.xdmf
warning: Mw computed over 0-85s (avoiding contribution of small residual moment after rupture)
jobid_3875599 moment magnitude: 5.244110888887304 (M0 = 9.3576e+16)
Finished writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875599/moment_rate_mainshock.png
No matching file found for jobid 3875599. Looking for output-fault.xdmf instead
mu_s: 0.5
mu_d: 0.35
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875599/output_jobid_3875599_extracted-fault.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875599/output_jobid_3875599_extracted-fault.xdmf
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875599/output_jobid_3875599_extracted-fault.h5
Job ID set as: 3875599
mu_s: 0.5
mu_d: 0.35
~/haiti-rupture-inputs/dynamic-rupture/regional-only/automated-runs/yaml_build_test
